Fix summary and descritpion for invoice search

--- a/api-reference-8-sept.yaml
+++ b/api-reference-8-sept.yaml
@@ -140,9 +140,9 @@ paths:
     get:
       tags:
         - Accounting Invoice
-      summary: Search for an item
-      description: Search for an item
-      operationId: searchForAnItem
+      summary: Search for invoices
+      description: Search for invoices by contact ID or external reference.
+      operationId: searchForAnInvoice
       parameters:
         - name: contactID
           in: query
