Add required field for Domain POST

--- a/api-reference-8-sept.yaml
+++ b/api-reference-8-sept.yaml
@@ -3567,6 +3567,8 @@ paths:
                   description: The name of the domain.
                   type: string
                   example: 'Offshore'
+              required:
+                - name
       responses:
         '200':
           description: A single domain
